# selenium_basic

./: pyproject.toml
app/: cookie_clicker.py  main.py
