[tool.poetry]
name = "selenium-project"
version = "0.1.0"
description = ""
authors = ["Vinicius José <vinijosenog@hotmail.com>"]
readme = "README.md"
packages = [{include = "selenium_project"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
